# fastapi_example

./: .gitignore  README.md  database.py  pyproject.toml  requirements.txt  run.py
src/app/: app.py  deps.py  main.py  schemas.py  utils.py
