[tool.poetry]
name = "fastapi-example"
version = "0.1.0"
description = ""
authors = ["Yuliya Vdovina <yu.a.vdovina@gmail.com>"]
readme = "README.md"
packages = [{include = "fastapi_example"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.97.0"
sqlalchemy = "^2.0.16"
uvicorn = "^0.22.0"
passlib = "^1.7.4"
python-jose = "^3.3.0"
python-multipart = "^0.0.6"
bcrypt = "^4.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
